--- a/doc/README
+++ b/doc/README
@@ -1,7 +1,7 @@
-NovaCoin 0.3.0 BETA
+DotCoin 0.3.0 BETA
 
-Copyright (c) 2013 NovaCoin Developers
-Copyright (c) 2011-2012 PPCoin Developers
+Copyright (c) 2013 DotCoin Developers
+Copyright (c) 2011-2012 DotCoin Developers
 Distributed under the MIT/X11 software license, see the accompanying
 file license.txt or http://www.opensource.org/licenses/mit-license.php.
 This product includes software developed by the OpenSSL Project for use in
@@ -11,16 +11,16 @@ cryptographic software written by Eric Young (eay@cryptsoft.com).
 
 Intro
 -----
-NovaCoin is a free open source project derived from PPCoin, with
+DotCoin is a free open source project derived from DotCoin, with
 the goal of providing a long-term energy-efficient scrypt-based crypto-currency.
-Built on the foundation of Dotcoin and PPCoin, innovations such as proof-of-stake
+Built on the foundation of Dotcoin and DotCoin, innovations such as proof-of-stake
 help further advance the field of crypto-currency.
 
 -----
 
-PPCoin 0.3.0 BETA
+DotCoin 0.3.0 BETA
 
-Copyright (c) 2011-2012 PPCoin Developers
+Copyright (c) 2011-2012 DotCoin Developers
 Distributed under the MIT/X11 software license, see the accompanying
 file license.txt or http://www.opensource.org/licenses/mit-license.php.
 This product includes software developed by the OpenSSL Project for use in
@@ -30,7 +30,7 @@ cryptographic software written by Eric Young (eay@cryptsoft.com).
 
 Intro
 -----
-PPCoin is a free open source project derived from Dotcoin, with
+DotCoin is a free open source project derived from Dotcoin, with
 the goal of providing a long-term energy-efficient crypto-currency.
 Built on the foundation of Dotcoin, innovations such as proof-of-stake
 help further advance the field of crypto-currency.
@@ -39,28 +39,28 @@ help further advance the field of crypto-currency.
 Setup
 -----
 Unpack the files into a directory and run:
- bin/32/ppcoind (headless, 32-bit)
- bin/64/ppcoind (headless, 64-bit)
+ bin/32/dotcoind (headless, 32-bit)
+ bin/64/dotcoind (headless, 64-bit)
 
 The software automatically finds other nodes to connect to.  You can
 enable Universal Plug and Play (UPnP) with your router/firewall
 or forward port 9901 (TCP) to your computer so you can receive
-incoming connections.  PPCoin works without incoming connections,
-but allowing incoming connections helps the PPCoin network.
+incoming connections.  DotCoin works without incoming connections,
+but allowing incoming connections helps the DotCoin network.
 
 
 Upgrade
 -------
 All you existing coins/transactions should be intact with the upgrade.
 To upgrade from 0.2, first backup wallet
-ppcoind backupwallet <destination_backup_file>
-Then shutdown ppcoind by
-ppcoind stop
-Start up the new ppcoind (0.2.2).
+dotcoind backupwallet <destination_backup_file>
+Then shutdown dotcoind by
+dotcoind stop
+Start up the new dotcoind (0.2.2).
 
 
-See the documentation/wiki at the ppcoin website:
-  http://www.ppcoin.org/
+See the documentation/wiki at the dotcoin website:
+  http://www.dotcoin.org/
 for help and more information.
 
 
